# azure-iot-kafka-pipeline

./: .gitignore  LICENSE  README.md  WALKTHROUGH.md  docker-compose.yml  setup_dependencies.sh
backend/: Dockerfile  requirements.txt
backend/src/: main.py
backend/src/routers/: devices.py  telemetry.py
dashboard/: Dockerfile  nginx.conf  package.json  vite.config.ts
dashboard/src/: App.tsx  main.tsx
dashboard/src/components/: Layout.tsx
dashboard/src/pages/: Analytics.tsx  Devices.tsx  Overview.tsx  Settings.tsx
dashboard/src/services/: api.ts
infrastructure/kubernetes/: deployments.yaml  hpa.yaml
processor/: Dockerfile  debug_consumer.py  requirements.txt
processor/src/: database.py  main.py  processor.py
simulator/: CMakeLists.txt  Dockerfile
simulator/include/: Device.hpp  SmartAC.hpp  SmartFan.hpp  SmartLight.hpp
simulator/src/: Device.cpp  SmartAC.cpp  SmartFan.cpp  SmartLight.cpp  main.cpp
